GatewayInjection/gatewayInjection.yaml
apiVersion: v1
kind: Service
metadata:
  name: toolkit-gateway
  namespace: toolkit
spec:
  type: ClusterIP
  selector:
    istio: toolkitgateway
  ports:
  - name: http2
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolkit-gateway
  namespace: toolkit
spec:
  selector:
    matchLabels:
      istio: toolkitgateway
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        istio: toolkitgateway
        sidecar.istio.io/inject: "true" 
    spec:
      containers:
      - name: istio-proxy
        image: auto
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: toolkit-ingress
  namespace: toolkit
spec:
  podSelector:
    matchLabels:
      istio: toolkitgateway
  ingress:
    - {}
  policyTypes:
  - Ingress
